# Scribel

./: .AI_INSTRUCTION.md  .gitignore  CLAUDE.md  PARALLEL_WORKFLOW.md  PRD.md  cleanup-worktrees.sh  package-lock.json  package.json  setup-parallel-dev.sh
.claude/: settings.local.json
.claude/agents/: AGENT_AI_GODS.md  AGENT_BE_GEEKS.md  AGENT_FE_DUDES.md  AGENT_MASTER_TL.md  AGENT_THE_PO.md  AI_GODS.agent.md  BE_GEEKS.agent.md  FE_DUDES.agent.md  MASTER_TL.agent.md  THE_PO.agent.md
.claude/commands/: squad.go.md  squad.new.md
.specify/memory/: constitution.md
.specstory/history/: 2026-01-19_08-49Z-aligning-worktree-and-document-setup.md
docs/: README.md
plan/: README.md  epics.md
plan/epic-1-foundation/: README.md  feature-1-project-scaffold.md  feature-2-jot-storage.md  feature-3-quick-jot-interface.md  feature-4-global-hotkey.md
plan/epic-2-vault-integration/: README.md
plan/epic-3-intelligence/: README.md
plan/epic-4-agentic/: README.md
plan/epic-5-polish/: README.md
plan/epic-6-advanced/: README.md
specs/: README.md
specs/001-jot-storage-vault-indexing/: data-model.md  plan.md  quickstart.md  research.md
specs/epic-1/: feature-1.4-global-hotkey.md
specs/epic-1-feat-001-jot-storage-vault-indexing/: spec.md  tasks.md
specs/epic-2-feat-001-vault-config/: plan.md  spec.md  tasks.md
specs/epic-2-feat-002-file-watcher-jots/: plan.md  spec.md  tasks.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: jots.rs  mod.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/jots/: index.rs  mod.rs  models.rs  parser.rs  storage.rs  watcher.rs
src/api/: jots.ts
src/components/: JotContent.tsx  JotInput.tsx  JotItem.tsx  JotList.tsx  JotPanel.tsx
src/hooks/: useJots.ts
src/types/: jot.ts
work/: HANDOFF_NOTES.md  README.md  WORKFLOW.md  WORKING_LOG.md
(+25 files in other folders)
