[package]
name = "scribel"
version = "0.1.0"
description = "Rapid note capture with AI-powered knowledge management"
authors = ["Tomax Wang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scribel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite with bundled SQLite (no system dependency required)
rusqlite = { version = "0.32", features = ["bundled"] }

# YAML parsing for jot frontmatter
serde_yaml = "0.9"

# Error handling
thiserror = "2"

# Tag and link extraction
regex = "1"
once_cell = "1"

# DateTime handling
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "6"

# Random ID generation
rand = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"

